# mdbook-citeproc

./: Cargo.toml  flake.nix  pandoc.config.sh  result
.github/: dependabot.yml
.github/workflows/: ci.yml  update.yml
src/: main.rs
