[package]
name = "mdbook-citeproc"
version = "0.0.12"
edition = "2021"

[dependencies]
clap = "4.5.23"
mdbook = "0.4.43"
semver = { version = "1.0.23", features = ["serde"] }
serde_json = "1.0.133"

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "unwind"
incremental = false
lto = "thin"
debug-assertions = false
